src/salesforce/objects/Portfolio_Analytics__c.object
<CustomObject>
    <fields>
        <fullName>Visit_Date__c</fullName>
        <label>Visit Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <label>IP Address</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Agent__c</fullName>
        <label>User Agent</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Page_Views__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Page Views</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Seconds__c</fullName>
        <label>Time Spent (Seconds)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer_URL__c</fullName>
        <label>Referrer URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location_Country__c</fullName>
        <label>Location Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Portfolio Analytics</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Analytics Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Analytics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>